Working rsu management get endpoints